--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
             <nav class="hidden md:flex space-x-6">
                 <a href="#home" class="hover:text-amber-300 transition-colors">Home</a>
-                <a href="#services" class="hover:text-amber-300 transition-colors">Services</a>
                 <a href="#about-us" class="hover:text-amber-300 transition-colors">About Us</a>
+                <a href="#services" class="hover:text-amber-300 transition-colors">Services</a>
                 <a href="#why-choose-us" class="hover:text-amber-300 transition-colors">Why Choose Us</a>
                 <a href="#contact" class="hover:text-amber-300 transition-colors">Contact</a>
             </nav>
@@ -228,7 +228,7 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-12 section-heading">Why Partner with A-Bridge AI Services?</h2>
             <p class="text-lg mb-8 max-w-3xl mx-auto">
-                Choosing A-Bridge AI Services means opting for a partner deeply committed to **Ethical AI, Transparent Insights, and Unwavering Integrity.** Our 25 years of experience in complex IT environments means we understand the nuances of data, security, and delivering robust solutions.
+                <!-- Choosing A-Bridge AI Services means opting for a partner deeply committed to **Ethical AI, Transparent Insights, and Unwavering Integrity.** Our 25 years of experience in complex IT environments means we understand the nuances of data, security, and delivering robust solutions.-->
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <!-- Strategic Problem Solving -->
@@ -286,7 +286,7 @@
     <!-- Clientele Section -->
     <section id="clientele" class="py-16 md:py-24 bg-gray-100">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-8 section-heading">Our Valued Clientele</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-8 section-heading">Our Valued Clientele Sector</h2>
             <p class="text-lg mb-8 max-w-3xl mx-auto">
                 We are proud to serve leading organizations at the forefront of critical policy and legal discourse. Our expertise is tailored for:
             </p>
@@ -334,8 +334,8 @@
                 </form>
                 <div class="mt-8 text-gray-700">
                     <p class="font-semibold">Direct Contact:</p>
-                    <p>Email: <a href="mailto:info@abridgeaiservices.com" class="text-blue-700 hover:underline">info@abridgeaiservices.com</a></p>
-                    <p>Phone: <a href="tel:+1234567890" class="text-blue-700 hover:underline">+1 (234) 567-890</a></p>
+                    <p>Email: <a href="mailto:abridge.ai@outlook.in" class="text-blue-700 hover:underline">abridge.ai@outlook.in</a></p>
+                    <!--<p>Phone: <a href="tel:+1234567890" class="text-blue-700 hover:underline">+1 (234) 567-890</a></p>-->
                 </div>
             </div>
         </div>
@@ -351,7 +351,7 @@
                 Ethical AI. Transparent Insights. Unwavering Integrity.
             </p>
             <div class="flex justify-center space-x-6 mb-6">
-                <a href="https://linkedin.com/yourprofile" target="_blank" class="text-white hover:text-amber-300 transition-colors">
+                <a href="www.linkedin.com/in/abhay-kulkarni-263952229" target="_blank" class="text-white hover:text-amber-300 transition-colors">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.444-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.227 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.456c.98 0 1.772-.773 1.772-1.729V1.729C24 .774 23.207 0 22.227 0z"></path></svg>
                 </a>
                 <a href="https://twitter.com/yourprofile" target="_blank" class="text-white hover:text-amber-300 transition-colors">
@@ -393,3 +393,4 @@
 
 </body>
 </html>
+
