--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <nav class="hidden md:flex space-x-6">
                 <a href="#home" class="hover:text-amber-300 transition-colors">Home</a>
                 <a href="#about-us" class="hover:text-amber-300 transition-colors">About Us</a>
-                <a href="#services" class="hover:text-amber-300 transition-colors">Services</a>
-                <a href="#why-choose-us" class="hover:text-amber-300 transition-colors">Why Choose Us</a>
+				<a href="#why-choose-us" class="hover:text-amber-300 transition-colors">Why Choose Us</a>
+				<a href="#services" class="hover:text-amber-300 transition-colors">Services</a>
                 <a href="#contact" class="hover:text-amber-300 transition-colors">Contact</a>
             </nav>
             <!-- Mobile Menu Button -->
@@ -83,10 +83,10 @@
     <section id="home" class="relative bg-gradient-to-r from-blue-900 to-indigo-900 text-white py-20 md:py-32 text-center overflow-hidden rounded-b-lg shadow-xl">
         <div class="container mx-auto px-6 relative z-10">
             <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">
-                Precision Insights. <span class="accent-color">Strategic Advantage.</span>
+                Precision Insights. <span class="accent-color">Strategic Advantage..</span>
             </h1>
             <p class="text-lg md:text-2xl mb-8 max-w-3xl mx-auto">
-                AI-Powered Text Processing & Synthesis for Law, Policy & Research | Bridging Knowledge with Actionable Intelligence
+                AI-Powered Text Processing & Synthesis for Law, Policy & Research Bridging Knowledge with Actionable Intelligence
             </p>
             <a href="#contact" class="btn-primary inline-block text-lg font-medium shadow-lg hover:shadow-xl">
                 Get Your Custom Solution
@@ -116,7 +116,7 @@
                 <!-- Tab Content -->
                 <div id="our-story-content" class="tab-content text-left text-lg leading-relaxed">
                     <p class="mb-4">
-                        A-Bridge AI Services was founded from a deep-seated passion to transform how complex information is accessed and utilized. Born from 25 years of robust experience in the IT sector, our mission is to empower think tanks, policy research organizations, and legal & judiciary entities with unparalleled content curation and synthesis. We bridge the gap between vast data and actionable intelligence, ensuring our clients gain a strategic advantage.
+                        A-Bridge AI Services was founded from a deep-seated passion to transform how complex information is accessed and utilized. Born from 25 years of robust experience in the IT sector, our mission is to empower think tank backboness, organizational policy research, and legal & judiciary entities with unparalleled content curation and synthesis. We bridge the gap between vast data and actionable intelligence, ensuring our clients gain a strategic advantage.
                     </p>
                     <p>
                         Our journey combines technical mastery with a clear vision for the future of knowledge management. We are committed to ethical AI practices, transparent insights, and unwavering integrity in every solution we provide.
@@ -131,15 +131,37 @@
                             <p class="mb-4">
                                 As a seasoned professional with over 25 years in the Information Technology sector, evolving from Software Developer to Chief Technical Officer, I've cultivated a profound understanding of complex systems, data architecture, and solution delivery. My career has been defined by a commitment to problem-solving and leveraging technology for efficiency, particularly through the strategic deployment of Open Source Free Software.
                             </p>
-                            <p class="mb-2">
-                                **Key Transferable Skills from 25+ Years IT:**
-                                <ul class="list-disc list-inside ml-4 space-y-1">
-                                    <li>**Research & Analysis (FOSS Philosophy):** Rigorous research, analysis, and evaluation, directly applied to synthesizing complex information.</li>
-                                    <li>**Strategic Problem Identification & Solution Architecture:** Architecting AI-driven solutions that translate into strategic advantages.</li>
-                                    <li>**Cross-Functional Collaboration & Stakeholder Engagement:** Facilitating seamless team collaboration and effective engagement at all organizational levels.</li>
-                                    <li>**Adaptability & Responsiveness:** Swiftly adapting to changing circumstances, ensuring timely delivery of critical intelligence.</li>
-                                </ul>
-                            </p>
+                            <h4 class="font-semibold section-heading mb-3 mt-4">Key Transferable Skills from 25+ Years IT:</h4>
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <div class="flex items-start p-3 bg-blue-50 rounded-lg shadow-sm">
+                                    <span class="text-3xl accent-color mr-3">&#x1F50E;</span> <!-- Magnifying Glass Icon -->
+                                    <div>
+                                        <p class="font-semibold text-lg section-heading">Research & Analysis (FOSS Philosophy)</p>
+                                        <p class="text-gray-700 text-base">Rigorous research, analysis, and evaluation, directly applied to synthesizing complex information.</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start p-3 bg-blue-50 rounded-lg shadow-sm">
+                                    <span class="text-3xl accent-color mr-3">&#x1F4A1;</span> <!-- Lightbulb Icon -->
+                                    <div>
+                                        <p class="font-semibold text-lg section-heading">Strategic Problem Identification & Solution Architecture</p>
+                                        <p class="text-gray-700 text-base">Architecting AI-driven solutions that translate into strategic advantages.</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start p-3 bg-blue-50 rounded-lg shadow-sm">
+                                    <span class="text-3xl accent-color mr-3">&#x1F91D;</span> <!-- Handshake Icon -->
+                                    <div>
+                                        <p class="font-semibold text-lg section-heading">Cross-Functional Collaboration & Stakeholder Engagement</p>
+                                        <p class="text-gray-700 text-base">Facilitating seamless team collaboration and effective engagement at all organizational levels.</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start p-3 bg-blue-50 rounded-lg shadow-sm">
+                                    <span class="text-3xl accent-color mr-3">&#x26A1;</span> <!-- High Voltage Icon -->
+                                    <div>
+                                        <p class="font-semibold text-lg section-heading">Adaptability & Responsiveness</p>
+                                        <p class="text-gray-700 text-base">My IT career instilled deep flexibility to swiftly adapt to changing circumstances, ensuring timely delivery of critical intelligence.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -184,13 +206,13 @@
     <!-- Services Section -->
     <section id="services" class="py-16 md:py-24 bg-gray-100">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-12 section-heading">Our Core Methodology: Collate - Generate - Disseminate</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-12 section-heading">Our Core Methodology: Collate - Generate - Assimilate</h2>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <!-- Collate -->
                 <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                     <div class="text-5xl accent-color mb-4">
-                        &#x1F4C4; <!-- Document icon -->
+                        &#128218; <!-- Document icon -->
                     </div>
                     <h3 class="text-2xl font-semibold mb-4 section-heading">Collate: Intelligent Source Acquisition</h3>
                     <p class="text-gray-700">
@@ -209,12 +231,12 @@
                     </p>
                 </div>
 
-                <!-- Disseminate -->
+                <!-- Assimilate -->
                 <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                     <div class="text-5xl accent-color mb-4">
-                        &#x1F4E2; <!-- Megaphone icon -->
+                        &#128196; <!-- Megaphone icon &#x1F4C4 -->
                     </div>
-                    <h3 class="text-2xl font-semibold mb-4 section-heading">Disseminate: Actionable Insights Delivery</h3>
+                    <h3 class="text-2xl font-semibold mb-4 section-heading">Assimilate: Actionable Insights Delivery</h3>
                     <p class="text-gray-700">
                         We transform raw data into high-value, usable content and actionable insights. Our outputs are tailored to your specific needs, enabling informed decision-making and strategic advantage for your policy research, analysis, and legal endeavors.
                     </p>
@@ -224,7 +246,7 @@
     </section>
 
     <!-- Why Choose Us Section (Restructured) -->
-    <section id="why-choose-us" class="py-16 md:py-24 bg-white">
+    <section id="why-choose-us" class="py-16 md:py-24 bg-blue-50"> <!-- Changed background to bg-blue-50 -->
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-12 section-heading">Why Partner with A-Bridge AI Services?</h2>
             <p class="text-lg mb-8 max-w-3xl mx-auto">
@@ -286,7 +308,7 @@
     <!-- Clientele Section -->
     <section id="clientele" class="py-16 md:py-24 bg-gray-100">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-8 section-heading">Our Valued Clientele Sector</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-8 section-heading">Our Valued Clientele Sectors</h2>
             <p class="text-lg mb-8 max-w-3xl mx-auto">
                 We are proud to serve leading organizations at the forefront of critical policy and legal discourse. Our expertise is tailored for:
             </p>
@@ -296,7 +318,7 @@
                     <p class="text-xl font-semibold section-heading">Think Tanks</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center justify-center h-40">
-                    <span class="text-5xl accent-color mb-2">&#x1F4DA;</span> <!-- Books icon -->
+                    <span class="text-5xl accent-color mb-2">&#128214;</span> <!-- Books icon -->
                     <p class="text-xl font-semibold section-heading">Policy Research & Analysis</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center justify-center h-40">
@@ -351,7 +373,7 @@
                 Ethical AI. Transparent Insights. Unwavering Integrity.
             </p>
             <div class="flex justify-center space-x-6 mb-6">
-                <a href="www.linkedin.com/in/abhay-kulkarni-263952229" target="_blank" class="text-white hover:text-amber-300 transition-colors">
+                <a href="https://www.linkedin.com/in/abhay-kulkarni-263952229" target="_blank" class="text-white hover:text-amber-300 transition-colors">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.444-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.227 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.456c.98 0 1.772-.773 1.772-1.729V1.729C24 .774 23.207 0 22.227 0z"></path></svg>
                 </a>
                 <a href="https://twitter.com/yourprofile" target="_blank" class="text-white hover:text-amber-300 transition-colors">
@@ -393,4 +415,3 @@
 
 </body>
 </html>
-
